--- a/TrabalhandoComFuncoesEstruturasDeDadoseExcecoesHora+da+prática.ipynb
+++ b/TrabalhandoComFuncoesEstruturasDeDadoseExcecoesHora+da+prática.ipynb
@@ -485,23 +485,17 @@
     {
       "cell_type": "code",
       "source": [
+        "# Lista gerada\n",
         "lista = [16, 14, 63, 65, 17, 99, 70, 11, 20, 48, 79, 32, 17, 89, 12, 25, 66]\n",
         "\n",
-        "# Leitura do tamanho da lista\n",
-        "tamanho_lista = len(lista)\n",
+        "# Lendo o tamanho, maior e menor número e soma, respectivamente, utilizando as built-in functions\n",
+        "tam = len(lista)\n",
+        "maior = max(lista)\n",
+        "menor = min(lista)\n",
+        "soma = sum(lista)\n",
         "\n",
-        "# Leitura do maior e menor valor\n",
-        "maior_valor = max(lista)\n",
-        "menor_valor = min(lista)\n",
-        "\n",
-        "# Soma dos valores da lista\n",
-        "soma_valores = sum(lista)\n",
-        "\n",
-        "# Soma dos valores pares da lista\n",
-        "soma_pares = sum(num for num in lista if num % 2 == 0)\n",
-        "\n",
-        "# Exibição dos resultados\n",
-        "print(f\"A lista possui {tamanho_lista} números em que o maior número é {maior_valor} e o menor número é {menor_valor}. A soma dos valores pares presentes nela é igual a {soma_pares}.\")\n",
+        "# Exibindo o texto\n",
+        "print(f\"A lista possui {tam} números em que o maior número é {maior} e o menor número é {menor}. A soma dos valores  presentes nela é igual a {soma}.\")\n",
         "\n"
       ],
       "metadata": {
@@ -509,7 +503,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9e4d13f9-dd13-4fac-d2e5-e4ab3bffe591"
+        "outputId": "abdeb19b-4b4f-49cf-8b77-305c65419b3b"
       },
       "execution_count": 2,
       "outputs": [
@@ -517,7 +511,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "A lista possui 17 números em que o maior número é 99 e o menor número é 11. A soma dos valores pares presentes nela é igual a 278.\n"
+            "A lista possui 17 números em que o maior número é 99 e o menor número é 11. A soma dos valores  presentes nela é igual a 743.\n"
           ]
         }
       ]
@@ -542,12 +536,49 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Requisitando o número\n",
+        "num = int(input(\"Digite um número inteiro de 1 a 10:\"))\n",
+        "\n",
+        "# Gerando a função tabuada()\n",
+        "def tabuada(numero: int):\n",
+        "  print(f'Tabuada do {numero}:')\n",
+        "  for i in range(11):\n",
+        "    resultado = numero * i\n",
+        "    print(f'{numero} x {i} = {resultado}')\n",
+        "\n",
+        "# lendo a tabuada do número escolhido\n",
+        "tabuada(num)\n"
+      ],
       "metadata": {
-        "id": "DxHuhb19a1d0"
+        "id": "DxHuhb19a1d0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "1c84d018-1d22-4c45-e723-8552c0efc47f"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite um número inteiro de 1 a 10:5\n",
+            "Tabuada do 5:\n",
+            "5 x 0 = 0\n",
+            "5 x 1 = 5\n",
+            "5 x 2 = 10\n",
+            "5 x 3 = 15\n",
+            "5 x 4 = 20\n",
+            "5 x 5 = 25\n",
+            "5 x 6 = 30\n",
+            "5 x 7 = 35\n",
+            "5 x 8 = 40\n",
+            "5 x 9 = 45\n",
+            "5 x 10 = 50\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -567,7 +598,24 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Lista gerada\n",
+        "lista = [97, 80, 94, 88, 80, 1, 16, 53, 62, 32, 24, 99]\n",
+        "\n",
+        "# declarando a lista de multiplos de 3\n",
+        "mult_3 = []\n",
+        "# função para gerar uma lista dos múltiplos de 3 a partir de uma lista\n",
+        "def multiplo_3(lista: list) -> list:\n",
+        "  for i in range(len(lista)):\n",
+        "    # condição para um número ser múltiplo de 3\n",
+        "    if lista[i] % 3 == 0:\n",
+        "      mult_3.append(lista[i])\n",
+        "  return mult_3\n",
+        "\n",
+        "# retornando a lista gerada para a variável mult_3\n",
+        "mult_3 = multiplo_3(lista)\n",
+        "mult_3\n"
+      ],
       "metadata": {
         "id": "kYrKxhd8a1d0"
       },
@@ -588,7 +636,17 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Lista dos números\n",
+        "numeros = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+        "\n",
+        "# Função lambda que eleva um número ao quadrado\n",
+        "quadrado = lambda x: x ** 2\n",
+        "\n",
+        "# Utilizando a função map() para aplicar a função lambda em cada número da lista\n",
+        "resultado = list(map(quadrado, numeros))\n",
+        "resultado\n"
+      ],
       "metadata": {
         "id": "Iav68EpKa1d0"
       },
@@ -623,7 +681,24 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# declarando a lista de notas\n",
+        "notas = []\n",
+        "# laço for para pedir as 5 notas e armazená-las na lista notas\n",
+        "for i in range(1,6):\n",
+        "  nota = float(input(f\"Digite a {i}ª nota: \"))\n",
+        "  notas.append(nota)\n",
+        "\n",
+        "# Função para remover a maior e menor nota e retornar a média das notas restantes\n",
+        "def media(lista):\n",
+        "  lista.remove(max(lista))\n",
+        "  lista.remove(min(lista))\n",
+        "  return sum(lista) / len(lista)\n",
+        "\n",
+        "# Chamando a função e imprimindo a nota da(o) skatista\n",
+        "media = media(notas)\n",
+        "print(f\"Nota da manobra: {round(media, 1)}\")\n"
+      ],
       "metadata": {
         "id": "1nbQ-hIRa1d0"
       },
@@ -652,7 +727,29 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# declarando a lista de notas\n",
+        "notas = []\n",
+        "# laço for para pedir as 4 notas e armazená-las na lista notas\n",
+        "for i in range(1,5):\n",
+        "  nota = float(input(f\"Digite a {i}ª nota: \"))\n",
+        "  notas.append(nota)\n",
+        "\n",
+        "def cadastro(lista):\n",
+        "  maior = max(lista)\n",
+        "  menor = min(lista)\n",
+        "  media = sum(lista) / len(lista)\n",
+        "  if media >= 6:\n",
+        "    situacao = \"Aprovado(a)\"\n",
+        "  else:\n",
+        "    situacao = \"Reprovado(a)\"\n",
+        "\n",
+        "  return (media, maior, menor, situacao)\n",
+        "\n",
+        "media, maior, menor, situacao = cadastro(notas)\n",
+        "\n",
+        "print(f\"O(a) estudante obteve uma media de {media}, com a sua maior nota de {maior} pontos e a menor nota de {menor} pontos e foi {situacao}\")\n"
+      ],
       "metadata": {
         "id": "5Bx-K65ya1d0"
       },
@@ -685,7 +782,19 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Nomes dos estudantes\n",
+        "nomes = [\"joão\", \"MaRia\", \"JOSÉ\"]\n",
+        "sobrenomes = [\"SILVA\", \"souza\", \"Tavares\"]\n",
+        "\n",
+        "# Função lambda que recebe duas listas e itera em cada uma concatenando seu nome e sobrenome\n",
+        "# na forma desejada\n",
+        "nome_completo = map(lambda nome, sobrenome: f'{nome.title()} {sobrenome.title()}', nomes, sobrenomes)\n",
+        "\n",
+        "# Leitura do objeto mapa(iterável)\n",
+        "for n in nome_completo:\n",
+        "  print(f'Nome completo: {n}')\n"
+      ],
       "metadata": {
         "id": "SdPq27E-a1d0"
       },
@@ -723,7 +832,23 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "gols_marcados = [2, 1, 3, 1, 0]\n",
+        "gols_sofridos = [1, 2, 2, 1, 3]\n",
+        "\n",
+        "def calcula_pontos(gols_marcados, gols_sofridos):\n",
+        "  pontos = 0\n",
+        "  for i in range(len(gols_marcados)):\n",
+        "    if gols_marcados[i] > gols_sofridos[i]:\n",
+        "      pontos += 3\n",
+        "    elif gols_marcados[i] == gols_sofridos[i]:\n",
+        "      pontos += 1\n",
+        "  aprov = 100 * pontos / (len(gols_marcados) * 3)\n",
+        "  return (pontos, aprov)\n",
+        "\n",
+        "pontos, aprov = calcula_pontos(gols_marcados, gols_sofridos)\n",
+        "print(f\"A pontuação do time foi de {pontos} e seu aproveitamento foi de {round(aprov)}%\")\n"
+      ],
       "metadata": {
         "id": "zxOwouhta1d0"
       },
@@ -752,7 +877,40 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "dias = int(input(\"Quantas diárias? \"))\n",
+        "cidade = input(\"Qual a cidade? [Salvador, Fortaleza, Natal ou Aracaju]: \")\n",
+        "distancias = [850, 800, 300, 550]\n",
+        "passeio = [200, 400, 250, 300]\n",
+        "km_l = 14\n",
+        "gasolina = 5\n",
+        "\n",
+        "def gasto_hotel(dias):\n",
+        "    return 150 * dias\n",
+        "\n",
+        "def gasto_gasolina(cidade):\n",
+        "    if cidade == \"Salvador\":\n",
+        "        return (2 * distancias[0] * gasolina) / km_l\n",
+        "    elif cidade == \"Fortaleza\":\n",
+        "        return (2 * distancias[1] * gasolina) / km_l\n",
+        "    elif cidade == \"Natal\":\n",
+        "        return (2 * distancias[2] * gasolina) / km_l\n",
+        "    elif cidade == \"Aracaju\":\n",
+        "        return (2 * distancias[3] * gasolina) / km_l\n",
+        "\n",
+        "def gasto_passeio(cidade, dias):\n",
+        "    if cidade==\"Salvador\":\n",
+        "        return passeio[0] * dias\n",
+        "    elif cidade==\"Fortaleza\":\n",
+        "        return passeio[1] * dias\n",
+        "    elif cidade==\"Natal\":\n",
+        "        return passeio[2] * dias\n",
+        "    elif cidade==\"Aracaju\":\n",
+        "        return passeio[3] * dias\n",
+        "\n",
+        "gastos = gasto_hotel(dias) + gasto_gasolina(cidade) + gasto_passeio(cidade, dias)\n",
+        "print(f\"Com base nos gastos definidos, uma viagem de {dias} dias para {cidade} saindo de Recife custaria {round(gastos, 2)} reais\")\n"
+      ],
       "metadata": {
         "id": "VQyaLsnWa1d0"
       },
@@ -776,7 +934,18 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Requisitando uma frase e separando-a pelos espaços. Usando replace para trocar\n",
+        "# pontuações por espaço.\n",
+        "frase = input(\"Digite uma frase: \")\n",
+        "frase = frase.replace(',',' ').replace('.',' ').replace('!',' ').replace('?',' ').split()\n",
+        "\n",
+        "# Filtrando a frase no formato de lista, passando para a lista tamanho\n",
+        "# apenas as palavras com 5 ou mais caracteres e imprimindo-a na tela\n",
+        "tamanho = list(filter(lambda x: len(x) >= 5, frase))\n",
+        "print(tamanho)\n",
+        "\n"
+      ],
       "metadata": {
         "id": "_WxPiZWtpWoX"
       },
